syntax = "proto3";
package de.nexus.modelserver.proto;

message GetConstraintsRequest{
}

message GetConstraintsResponse{
  repeated Constraint constraints = 1;
}

message GetConstraintRequest{
  string constraintName = 1;
}

message GetConstraintResponse{
  Constraint constraint = 1;
}

message ListConstraintsRequest{
}

message ListConstraintsResponse{
  repeated string constraints = 1;
}

message Constraint {
  string title = 1;
  string description = 2;
  string name = 3;
  bool violated = 4;
  repeated ConstraintAssertion assertions = 5;
  repeated FixProposals proposals = 6;
}

message ConstraintAssertion {
  bool violated = 1;
  string expression = 2;
}

message FixProposals {

}